# dependable-robot

./: .gitignore  CMakeLists.txt  main.cpp  uloader.cpp  uloader.h  umission.cpp  umission.h  workspace.code-workspace
.github/workflows/: cmake.yml
mission_parser/: mission.l  mission.y  mission_lexer.c  mission_lexer.cpp  mission_lexer.h  mission_parser.c  mission_parser.cpp  mission_parser.h  mission_parser.hpp  parser_test.c  parser_test.cpp
missions/: axe.mission  catch_ball.mission  drive_until_ramp.mission  follow_line.mission  follow_line_till_seesaw.mission  go_off_seesaw.mission  go_to_second_crossing_line.mission  move_to_the_ramp.mission  parser_test.mission  roundabout.mission  stop.mission  sweep.mission  test.mission  tunnel.mission  tunnel_close_second.mission  tunnel_open.mission  up_the_ramp.mission
missions/mission1/: 01_follow_line_till_seesaw.mission  02_catch_ball.mission  03_go_off_seesaw.mission
missions/mission2/: 01_drive_until_ramp.mission  02_move_to_the_ramp.mission  03_up_the_ramp.mission  04_sweep.mission  05_grab_second_ball.mission  05_place_second_ball.mission  06_go_to_steps.mission  06_place_second_ball.mission  07_go_to_steps.mission
missions/mission3/: 01_stairs.mission  02_push_bridge1.mission  02_roundabout.mission  03_orsted_first_ball.mission  03_roundabout.mission  04_orsted_place_ball.mission  05_orsted_go_back.mission  06_orsted_second_ball.mission  07_orsted_third_ball.mission  08_roundabout.mission
missions/mission4/: 01_tunnel_aproach.mission  02_tunnel.mission  03_tunnel_open.mission  04_tunnel_close.mission  05_tunnel_close_second.mission  06_axe.mission  07_go_home.mission  07_push_bridge2.mission  08_go_home.mission
missions/mission_orsted/: 01_catch_place_first_ball.mission
